# skills

./: .gitignore  .markdownlint-cli2.jsonc  LICENSE  MIRRORS  Makefile  README.md  flake.nix  pyproject.toml  skills-lock.json
.github/workflows/: test.yml  update.yml
scripts/: enable-plugins.js  install.sh  update.sh
skills/active-listening/: SKILL.md
skills/autoskill/: SKILL.md
skills/comments-clean/: SKILL.md
skills/commit-next/: SKILL.md
skills/commit-no-verify/: SKILL.md
skills/confidence/: SKILL.md
skills/dialectic/: SKILL.md
skills/explain/: SKILL.md
skills/help-skills/: SKILL.md
skills/medusa/: SKILL.md
skills/observe/: SKILL.md
skills/robot/: SKILL.md
skills/shortcuts/: SKILL.md
skills/triage/: SKILL.md
tests/: test_lock.py  test_shortcuts.py
